Chapter 07を本番化: v3を本番に、v2とv3削除、instruction更新

--- a/docs-site/docs/07_リソースグループ.md
+++ b/docs-site/docs/07_リソースグループ.md
@@ -1,225 +1,66 @@
-# 07. リソースグループ - 最初のAzureリソース
+# 07. リソースグループ - 基盤の作成
 
-## このChapterでやること
+!!! info "この章で学ぶこと"
+    `main.resource.groups.tf`でリソースグループを作成する仕組みを学びます：
 
-リソースグループの作成を理解しよう。
-
-**リソースグループって何？**
-
-Azureリソースを入れる「箱」みたいなもん。
-VMとかVNetとか、全てのリソースは必ずどこかのリソースグループに属する。
-
-**例えるなら**：
-
-- **リソースグループ**：本棚
-- **リソース**：本
-- 本棚がないと本を置けないでしょ？
+    1. リソースグループって何？
+    2. main.resource.groups.tfの解説
+    3. 公式モジュールの内部構造（完全解説）
+    4. for_eachの活用方法
+    5. 実践：新しいリソースグループの追加方法
 
 ---
 
-## リソースグループの基本
+## はじめに：リソースグループって何？
 
-### 構造
+### Azureの「フォルダ」みたいなもの
 
-```text title="リソースグループの構造"
-リソースグループ
-  ├── 場所（location）
-  ├── 名前（name）
-  ├── タグ（tags）
-  └── 中身のリソース
-      ├── VNet
-      ├── VM
-      └── Storage Account
-```
+リソースグループは、Azureリソースをまとめて管理する「箱」です。
 
-### ルール
+=== "例：会社の組織"
 
-**1つのリソースは1つのリソースグループにしか属せない**
+    ```text title="組織構造"
+    会社
+    ├── 営業部（リソースグループ）
+    │   ├── 営業システム（VM）
+    │   └── 顧客DB（Database）
+    ├── 開発部（リソースグループ）
+    │   ├── 開発サーバー（VM）
+    │   └── テストDB（Database）
+    └── 総務部（リソースグループ）
+        ├── 給与システム（VM）
+        └── 人事DB（Database）
+    ```
 
-```text title="リソースの所属ルール"
-OK:
-rg-hub
-  ├── vnet-hub
-  └── firewall
+    部署ごとに管理！
 
-NG:
-vnet-hubが2つのRGに属する（できない）
-```
+=== "Azure Landing Zonesの構成"
 
-### 削除の挙動
+    ```text title="リソースグループ構成"
+    Azure Subscription
+    ├── rg-connectivity-japaneast（接続用）
+    │   ├── VNet（仮想ネットワーク）
+    │   ├── Firewall（ファイアウォール）
+    │   └── Bastion（踏み台）
+    ├── rg-management-japaneast（管理用）
+    │   ├── Log Analytics
+    │   └── Automation Account
+    └── rg-identity-japaneast（ID管理用）
+        └── Domain Controller
+    ```
 
-**リソースグループを削除 → 中身のリソースも全部削除**
+### リソースグループのメリット
 
-```bash title="リソースグループの削除"
-# これやると...
-az group delete --name rg-hub
-
-# ↓中身も全部消える
-# - vnet-hub
-# - firewall
-# - bastion
-# 全部消えちゃう！
-```
-
-めっちゃ便利だけど、間違えると怖い。
-
----
-
-## Part 1: 設定ファイル（tfvars）
-
-### connectivity_resource_groups
-
-Chapter 3で見たこれ：
-
-```hcl title="テンプレート変数を使った定義"
-connectivity_resource_groups = {
-  primary = {
-    name     = "rg-{{starter_location_01_short}}-connectivity"
-    location = "{{starter_location_01}}"
-  }
-  secondary = {
-    name     = "rg-{{starter_location_02_short}}-connectivity"
-    location = "{{starter_location_02}}"
-  }
-}
-```
-
-**テンプレート処理後**：
-```hcl title="置換後の実際の値"
-connectivity_resource_groups = {
-  primary = {
-    name     = "rg-jp-connectivity"
-    location = "japaneast"
-  }
-  secondary = {
-    name     = "rg-jp-connectivity"
-    location = "japanwest"
-  }
-}
-```
-
-### タグの追加
-
-```hcl title="タグ付きリソースグループ"
-connectivity_resource_groups = {
-  primary = {
-    name     = "rg-{{starter_location_01_short}}-connectivity"
-    location = "{{starter_location_01}}"
-    tags = {
-      region = "primary"
-      tier   = "network"
-    }
-  }
-}
-```
-
-**タグって何？**
-メタデータ。コスト管理とか検索に使う。
-
-### enabled設定
-
-```hcl title="有効/無効の制御"
-connectivity_resource_groups = {
-  primary = {
-    name     = "rg-jp-connectivity"
-    location = "japaneast"
-    settings = {
-      enabled = true  # ←作る
-    }
-  }
-  secondary = {
-    name     = "rg-jp-connectivity"
-    location = "japanwest"
-    settings = {
-      enabled = false  # ←作らない
-    }
-  }
-}
-```
-
-**使い道**：
-一時的に無効化したい時とか、段階的にデプロイしたい時に便利。
+- **まとめて管理**: 関連リソースを1箇所に
+- **一括削除**: リソースグループごと削除可能
+- **タグ管理**: コスト管理や分類
+- **RBAC**: アクセス権限の設定
 
 ---
 
-## Part 2: 変数定義（variables.connectivity.tf）
+## Part 1: main.resource.groups.tf の全体像
 
-```hcl title="connectivity_resource_groups変数の定義"
-variable "connectivity_resource_groups" {
-  type = map(object({
-    name     = string
-    location = string
-    tags     = optional(map(string))
-    settings = optional(any)
-  }))
-  default     = {}
-  description = "A map of resource groups to create"
-}
-```
-
-### 型の解説
-
-#### map(object({...}))
-
-```hcl title="型の構造"
-map(object({...}))
-# ↑キー付きオブジェクトのマップ
-```
-
-**イメージ**：
-```hcl title="マップ構造の例"
-{
-  "primary" = {
-    name     = "..."
-    location = "..."
-  }
-  "secondary" = {
-    name     = "..."
-    location = "..."
-  }
-}
-```
-
-キー（`primary`、`secondary`）で識別できる。
-
-#### optional
-
-```hcl title="省略可能な属性"
-tags     = optional(map(string))
-settings = optional(any)
-```
-
-**意味**：省略してもOK
-
-```hcl title="属性の省略例"
-# タグ省略
-primary = {
-  name     = "rg-hub"
-  location = "japaneast"
-  # tags省略 → null
-}
-```
-
-### デフォルト値
-
-```hcl title="空マップのデフォルト"
-default = {}
-```
-
-**意味**：何も指定しなければ空マップ
-
-```hcl title="デフォルト値の動作"
-# tfvarsで何も書かない
-# ↓
-connectivity_resource_groups = {}
-# ↓リソースグループ作られない
-```
-
----
-
-## Part 3: モジュール呼び出し（main.resource.groups.tf）
-
-```hcl title="リソースグループモジュールの呼び出し"
+```hcl title="main.resource.groups.tf"
 module "resource_groups" {
   source  = "Azure/avm-res-resources-resourcegroup/azurerm"
   version = "0.2.1"
@@ -237,554 +78,880 @@ module "resource_groups" {
 }
 ```
 
-**1行ずつ見ていきましょう**
+**たった15行！** でも強力な公式モジュールを使っています。
 
-### source / version
+---
 
-```hcl title="モジュールのソース指定"
-source  = "Azure/avm-res-resources-resourcegroup/azurerm"
-version = "0.2.1"
+## Part 2: コードを詳しく見ていく
+
+### 2-1: モジュールの基本設定
+
+```hcl
+module "resource_groups" {
+  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
+  version = "0.2.1"
 ```
 
 **何してる？**
-Terraform Registryから公式モジュールをダウンロード。
 
-**URL**：
-https://registry.terraform.io/modules/Azure/avm-res-resources-resourcegroup/azurerm
+Azure公式の「Azure Verified Modules (AVM)」を使用。
 
-### for_each
+**AVMとは：**
 
-```hcl title="enabled条件付きfor_each"
+- Microsoftが公式にメンテナンスしているTerraformモジュール
+- ベストプラクティスに基づいた実装
+- バージョン管理されているので安全
+
+**モジュールの構成：**
+
+| ファイル | 役割 |
+|---------|------|
+| `main.tf` | リソース作成 |
+| `variables.tf` | 入力変数定義 |
+| `outputs.tf` | 出力定義 |
+| `terraform.tf` | プロバイダー要件 |
+
+### 2-2: for_eachでループ処理
+
+```hcl
 for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
 ```
 
-複雑！分解しよう。
+**何してる？**
 
-#### 基本構造
+`connectivity_resource_groups`から有効なリソースグループだけを選んでループ。
 
-```hcl
-for_each = マップ
-```
+**処理の流れ：**
 
-マップの各要素に対してリソースを作る。
+1. `module.config.outputs.connectivity_resource_groups`を取得
+2. `for key, value in ...`でループ
+3. `if try(value.settings.enabled, true)`でフィルタリング
+4. `{ key => value }`形式のマップを作成
 
-#### for式
+**具体例：**
 
-```hcl title="for式の構文"
-{ for key, value in 元のマップ : key => value if 条件 }
-```
-
-**やってること**：
-1. `module.config.outputs.connectivity_resource_groups`から各要素を取得
-2. 条件（`if`）に合うものだけ残す
-3. 新しいマップを作る
-
-#### 条件: try(value.settings.enabled, true)
-
-```hcl title="try関数の使用"
-try(value.settings.enabled, true)
-```
-
-**意味**：
-
-- `value.settings.enabled`が存在すればその値
-- 存在しなければ`true`
-
-**動作**：
-```hcl title="enabled判定の動作パターン"
-# enabled指定あり
-settings = { enabled = false }
-# ↓
-try(value.settings.enabled, true) → false → 作らない
-
-# enabled指定なし
-settings = {}
-# ↓
-try(value.settings.enabled, true) → true → 作る
-
-# settings自体がない
-# ↓
-try(value.settings.enabled, true) → true → 作る
-```
-
-#### 具体例
-
-```hcl title="for_eachによるフィルタリングの実例"
-# 入力
-connectivity_resource_groups = {
-  primary = {
-    name = "rg-primary"
+```hcl title="入力データ（connectivity_resource_groups）"
+{
+  "connectivity" = {
+    name     = "rg-connectivity-japaneast"
     location = "japaneast"
-  }
-  secondary = {
-    name = "rg-secondary"
-    location = "japanwest"
-    settings = { enabled = false }
-  }
-  tertiary = {
-    name = "rg-tertiary"
-    location = "eastus"
     settings = { enabled = true }
   }
+  "management" = {
+    name     = "rg-management-japaneast"
+    location = "japaneast"
+    settings = { enabled = false }  # 無効
+  }
 }
+```
 
-# for_each後
+**フィルタリング後：**
+
+```hcl title="for_each結果"
 {
-  "primary" = { name = "rg-primary", location = "japaneast" }
-  # secondaryは除外（enabled = false）
-  "tertiary" = { name = "rg-tertiary", location = "eastus" }
+  "connectivity" = {
+    name     = "rg-connectivity-japaneast"
+    location = "japaneast"
+    settings = { enabled = true }
+  }
+  # "management"は除外される
 }
-
-# 結果：primaryとtertiaryだけ作られる
 ```
 
-### name / location
+### 2-3: try()関数の役割
 
-```hcl title="each.valueの使用"
-name     = each.value.name
-location = each.value.location
+```hcl
+if try(value.settings.enabled, true)
 ```
 
-**each.value**：現在処理中の要素
+**何してる？**
 
-```hcl title="each.valueの内容"
-# primary処理中
-each.value = {
-  name = "rg-jp-connectivity"
-  location = "japaneast"
+`value.settings.enabled`が存在しない場合、`true`をデフォルト値として使う。
+
+**動作：**
+
+```hcl title="パターン1: enabledが定義されている"
+{
+  settings = { enabled = false }
 }
-
-# ↓
-name = "rg-jp-connectivity"
-location = "japaneast"
+→ false（明示的に無効）
 ```
 
-### tags
+```hcl title="パターン2: enabledが定義されていない"
+{
+  # settingsがない
+}
+→ true（デフォルトで有効）
+```
 
-```hcl title="タグのフォールバック処理"
+### 2-4: タグの優先順位
+
+```hcl
 tags = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
 ```
 
-**三項演算子**：
+**何してる？**
+
+リソースグループ固有のタグがなければ、グローバルタグを使う。
+
+**優先順位：**
+
+1. `each.value.tags`: リソースグループ固有のタグ
+2. `module.config.outputs.tags`: グローバルタグ
+
+### 2-5: プロバイダー指定
+
 ```hcl
-条件 ? 真の場合 : 偽の場合
-```
-
-**ロジック**：
-```hcl
-try(each.value.tags, null) == null
-  ? module.config.outputs.tags      # ←個別タグなし → 全体タグ使う
-  : each.value.tags                 # ←個別タグあり → それ使う
-```
-
-**動作**：
-```hcl title="タグの選択ロジック"
-# ケース1: 個別タグなし
-primary = {
-  name = "rg-hub"
-  # tagsなし
-}
-# ↓全体タグ使う
-tags = { deployed_by = "terraform", source = "alz-mgmt" }
-
-# ケース2: 個別タグあり
-primary = {
-  name = "rg-hub"
-  tags = { tier = "network" }
-}
-# ↓個別タグ使う
-tags = { tier = "network" }
-```
-
-### providers
-
-```hcl title="サブスクリプション指定"
 providers = {
   azurerm = azurerm.connectivity
 }
 ```
 
 **何してる？**
-Connectivityサブスクリプションにリソース作成。
 
-**provider alias**：
-```hcl title="providerの定義（terraform.tf）"
-# terraform.tf
-provider "azurerm" {
-  alias           = "connectivity"
-  subscription_id = var.subscription_ids["connectivity"]
-  ...
-}
-```
-
-特定のサブスクリプションを指定しています。
+`connectivity`サブスクリプション用のプロバイダーを使用。
 
 ---
 
-## Part 4: モジュールの出力
+## Part 3: 公式モジュールの内部構造
 
-### 何が出力される？
+### 3-1: モジュール全体像
 
-```hcl title="モジュール出力の参照"
-# 使い方
-module.resource_groups["primary"].resource_group_id
+**GitHubリポジトリ：**
+
+```text
+https://github.com/Azure/terraform-azurerm-avm-res-resources-resourcegroup
 ```
 
-**出力される情報**：
+**主要ファイル：**
 
-- `resource_group_id`：リソースグループのID
-- `name`：名前
-- `location`：場所
+```text
+terraform-azurerm-avm-res-resources-resourcegroup/
+├── main.tf                   # リソース定義
+├── variables.tf              # 入力変数
+├── outputs.tf                # 出力
+├── terraform.tf              # プロバイダー要件
+├── locals.tf                 # ローカル変数
+├── main.telemetry.tf         # テレメトリー
+└── data.tf                   # データソース
+```
 
-### 他のリソースから参照
+### 3-2: main.tf - リソース作成の中核
 
-```hcl title="リソースグループ名の参照"
-# VNetを作る時
-resource "azurerm_virtual_network" "hub" {
-  resource_group_name = module.resource_groups["primary"].name
-  ...
+```hcl title="main.tf（完全版）"
+resource "azurerm_resource_group" "this" {
+  location = var.location
+  name     = var.name
+  tags     = var.tags
+}
+
+# Resource Lock（削除防止）
+resource "azurerm_management_lock" "this" {
+  count = var.lock != null ? 1 : 0
+
+  lock_level = var.lock.kind
+  name       = coalesce(var.lock.name, "lock-${var.lock.kind}")
+  scope      = azurerm_resource_group.this.id
+  notes      = var.lock.kind == "CanNotDelete" ? "Cannot delete the resource or its child resources." : "Cannot delete or modify the resource or its child resources."
+}
+
+# Role Assignment（RBAC権限）
+resource "azurerm_role_assignment" "this" {
+  for_each = var.role_assignments
+
+  principal_id                           = each.value.principal_id
+  scope                                  = azurerm_resource_group.this.id
+  condition                              = each.value.condition
+  condition_version                      = each.value.condition_version
+  delegated_managed_identity_resource_id = each.value.delegated_managed_identity_resource_id
+  role_definition_id                     = strcontains(lower(each.value.role_definition_id_or_name), lower(local.role_definition_resource_substring)) ? "/subscriptions/${data.azurerm_subscription.current.subscription_id}${each.value.role_definition_id_or_name}" : null
+  role_definition_name                   = strcontains(lower(each.value.role_definition_id_or_name), lower(local.role_definition_resource_substring)) ? null : each.value.role_definition_id_or_name
+  skip_service_principal_aad_check       = each.value.skip_service_principal_aad_check
 }
 ```
 
-**効果**：
+**作成されるリソース：**
 
-- リソースグループ → VNetの順番で作られる（依存関係）
+| リソース | 必須 | 用途 |
+|---------|------|------|
+| `azurerm_resource_group` | ✅ 必須 | リソースグループ本体 |
+| `azurerm_management_lock` | オプション | 削除防止ロック |
+| `azurerm_role_assignment` | オプション | RBAC権限設定 |
 
----
+### 3-3: variables.tf - 入力変数定義
 
-## 実践：リソースグループを追加してみよう
+```hcl title="variables.tf（主要部分）"
+variable "location" {
+  type        = string
+  description = "Required. The Azure region for deployment of the this resource."
+  nullable    = false
+}
 
-### 例1: 開発環境用RG
+variable "name" {
+  type        = string
+  description = "Required. The name of the this resource."
 
-```hcl title="開発環境用リソースグループの追加"
-# platform-landing-zone.auto.tfvars
-connectivity_resource_groups = {
-  primary = {
-    name     = "rg-{{starter_location_01_short}}-connectivity"
-    location = "{{starter_location_01}}"
+  validation {
+    condition     = can(regex("^[a-zA-Z0-9_().-]{1,89}[a-zA-Z0-9_()-]$", var.name))
+    error_message = <<ERROR_MESSAGE
+    The resource group name must meet the following requirements:
+    - `Between 1 and 90 characters long.` 
+    - `Can only contain Alphanumerics, underscores, parentheses, hyphens, periods.`
+    - `Cannot end in a period`
+    ERROR_MESSAGE
   }
-  dev = {
-    name     = "rg-{{starter_location_01_short}}-dev"
-    location = "{{starter_location_01}}"
+}
+
+variable "enable_telemetry" {
+  type        = bool
+  default     = true
+  description = <<DESCRIPTION
+This variable controls whether or not telemetry is enabled for the module.
+For more information see <https://aka.ms/avm/telemetryinfo>.
+If it is set to false, then no telemetry will be collected.
+DESCRIPTION
+  nullable    = false
+}
+
+variable "lock" {
+  type = object({
+    kind = string
+    name = optional(string, null)
+  })
+  default     = null
+  description = <<DESCRIPTION
+  Controls the Resource Lock configuration for this resource. The following properties can be specified:
+  
+  - `kind` - (Required) The type of lock. Possible values are `\"CanNotDelete\"` and `\"ReadOnly\"`.
+  - `name` - (Optional) The name of the lock. If not specified, a name will be generated based on the `kind` value. Changing this forces the creation of a new resource.
+  DESCRIPTION
+
+  validation {
+    condition     = var.lock != null ? contains(["CanNotDelete", "ReadOnly"], var.lock.kind) : true
+    error_message = "Lock kind must be either `\"CanNotDelete\"` or `\"ReadOnly\"`."
+  }
+}
+
+variable "role_assignments" {
+  type = map(object({
+    role_definition_id_or_name             = string
+    principal_id                           = string
+    description                            = optional(string, null)
+    skip_service_principal_aad_check       = optional(bool, false)
+    condition                              = optional(string, null)
+    condition_version                      = optional(string, null)
+    delegated_managed_identity_resource_id = optional(string, null)
+    principal_type                         = optional(string, null)
+  }))
+  default     = {}
+  description = <<DESCRIPTION
+Optional. A map of role assignments to create on this resource. The map key is deliberately arbitrary to avoid issues where map keys maybe unknown at plan time.
+
+- `role_definition_id_or_name` - (Required) The ID or name of the role definition to assign to the principal.
+- `principal_id` - (Required) The ID of the principal to assign the role to.
+- `description` - (Optional) The description of the role assignment.
+- `skip_service_principal_aad_check` - (Optional) If set to true, skips the Azure Active Directory check for the service principal in the tenant. Defaults to false.
+- `condition` - (Optional) The condition which will be used to scope the role assignment.
+- `condition_version` - (Optional) The version of the condition syntax. Valid values are '2.0'.
+- `delegated_managed_identity_resource_id` - (Optional) The delegated Azure Resource Id which contains a Managed Identity. Changing this forces a new resource to be created. NOTE:
+this field is only used in cross tenant scenario.
+DESCRIPTION
+  nullable    = false
+
+  validation {
+    condition = alltrue(
+      [for role in var.role_assignments :
+        can(regex("^/providers/Microsoft\\.Authorization/roleDefinitions/[0-9a-fA-F-]+$", role.role_definition_id_or_name))
+        ||
+        can(regex("^[[:alpha:]]+?", role.role_definition_id_or_name))
+      ]
+    )
+    error_message = <<ERROR_MESSAGE
+        role_definition_id_or_name must have the following format: 
+         - Using the role definition Id : `/providers/Microsoft.Authorization/roleDefinitions/<role_guid>`
+         - Using the role name: Reader | "Storage Blob Data Reader"
+      ERROR_MESSAGE
+  }
+}
+
+variable "tags" {
+  type        = map(string)
+  default     = null
+  description = "(Optional) Tags of the resource."
+}
+```
+
+**変数の種類：**
+
+| 変数 | 必須 | デフォルト | 用途 |
+|------|------|-----------|------|
+| `location` | ✅ 必須 | なし | Azureリージョン |
+| `name` | ✅ 必須 | なし | リソースグループ名 |
+| `enable_telemetry` | オプション | `true` | テレメトリー有効化 |
+| `lock` | オプション | `null` | 削除防止ロック |
+| `role_assignments` | オプション | `{}` | RBAC権限 |
+| `tags` | オプション | `null` | タグ |
+
+### 3-4: outputs.tf - 出力定義
+
+```hcl title="outputs.tf"
+output "name" {
+  description = "The name of the resource group"
+  value       = azurerm_resource_group.this.name
+}
+
+output "resource" {
+  description = "This is the full output for the resource group."
+  value       = azurerm_resource_group.this
+}
+
+output "resource_id" {
+  description = "The resource Id of the resource group"
+  value       = azurerm_resource_group.this.id
+}
+```
+
+**出力される情報：**
+
+| 出力 | 内容 | 用途 |
+|------|------|------|
+| `name` | リソースグループ名 | 他モジュールで参照 |
+| `resource` | リソース全体 | すべてのプロパティにアクセス |
+| `resource_id` | リソースID | 依存関係の指定 |
+
+### 3-5: terraform.tf - プロバイダー要件
+
+```hcl title="terraform.tf"
+terraform {
+  required_version = ">= 1.9, < 2.0"
+
+  required_providers {
+    azapi = {
+      source  = "Azure/azapi"
+      version = "~> 2.4"
+    }
+    azurerm = {
+      source  = "hashicorp/azurerm"
+      version = ">= 3.71, < 5.0.0"
+    }
+    modtm = {
+      source  = "azure/modtm"
+      version = "~> 0.3"
+    }
+    random = {
+      source  = "hashicorp/random"
+      version = "~> 3.5"
+    }
+  }
+}
+```
+
+**必要なプロバイダー：**
+
+| プロバイダー | バージョン | 用途 |
+|------------|-----------|------|
+| `azurerm` | >= 3.71, < 5.0.0 | Azure管理 |
+| `azapi` | ~> 2.4 | ARM API直接操作 |
+| `modtm` | ~> 0.3 | テレメトリー |
+| `random` | ~> 3.5 | ランダム値生成 |
+
+### 3-6: locals.tf - ローカル変数
+
+```hcl title="locals.tf"
+locals {
+  role_definition_resource_substring = "/providers/Microsoft.Authorization/roleDefinitions"
+}
+```
+
+**役割：**
+
+Role Definition IDの判定に使用。
+
+### 3-7: data.tf - データソース
+
+```hcl title="data.tf"
+data "azurerm_subscription" "current" {}
+```
+
+**役割：**
+
+現在のサブスクリプション情報を取得。
+
+### 3-8: main.telemetry.tf - テレメトリー
+
+```hcl title="main.telemetry.tf（抜粋）"
+data "modtm_module_source" "telemetry" {
+  count = var.enable_telemetry ? 1 : 0
+
+  module_path = path.module
+}
+
+resource "random_uuid" "telemetry" {
+  count = var.enable_telemetry ? 1 : 0
+}
+
+resource "modtm_telemetry" "telemetry" {
+  count = var.enable_telemetry ? 1 : 0
+
+  tags = merge({
+    subscription_id = one(data.azapi_client_config.telemetry).subscription_id
+    tenant_id       = one(data.azapi_client_config.telemetry).tenant_id
+    module_source   = one(data.modtm_module_source.telemetry).module_source
+    module_version  = one(data.modtm_module_source.telemetry).module_version
+    random_id       = one(random_uuid.telemetry).result
+  }, { location = local.main_location })
+}
+```
+
+**役割：**
+
+Microsoftにモジュール使用状況を送信（匿名化）。
+
+---
+
+## Part 4: 動作の完全な流れ
+
+### ステップ1: 設定テンプレートから取得
+
+```hcl title="module.config.outputs.connectivity_resource_groups"
+{
+  "connectivity" = {
+    name     = "rg-connectivity-japaneast"
+    location = "japaneast"
     tags = {
-      environment = "development"
-      tier        = "network"
+      environment = "production"
+      purpose     = "connectivity"
     }
-  }
-}
-```
-
-### 例2: 複数リージョン
-
-```hcl title="マルチリージョン構成"
-connectivity_resource_groups = {
-  japaneast = {
-    name     = "rg-jpe-connectivity"
-    location = "japaneast"
-    tags = { region = "primary" }
-  }
-  japanwest = {
-    name     = "rg-jpw-connectivity"
-    location = "japanwest"
-    tags = { region = "secondary" }
-  }
-  eastus = {
-    name     = "rg-eus-connectivity"
-    location = "eastus"
-    tags = { region = "dr" }
-  }
-}
-```
-
-### 例3: 一時的に無効化
-
-```hcl title="enabledフラグでの制御"
-connectivity_resource_groups = {
-  primary = {
-    name     = "rg-jp-connectivity"
-    location = "japaneast"
-  }
-  secondary = {
-    name     = "rg-jp-connectivity-sec"
-    location = "japanwest"
     settings = {
-      enabled = false  # ←一時的に作らない
+      enabled = true
     }
   }
 }
 ```
 
-```bash title="段階的デプロイ"
-# 後で有効化
-terraform apply  # ←secondaryは作られない
+### ステップ2: for_eachでフィルタリング
 
-# enabled = trueに変更
-terraform apply  # ←secondaryが作られる
+```hcl title="フィルタリング処理"
+for_each = {
+  for key, value in module.config.outputs.connectivity_resource_groups : 
+    key => value 
+    if try(value.settings.enabled, true)
+}
 ```
 
----
+**結果：**
 
-## デバッグ技
-
-### 出力で確認
-
-```hcl title="デバッグ用output定義"
-# outputs.tf
-output "debug_resource_groups" {
-  value = {
-    for key, rg in module.resource_groups : key => {
-      id       = rg.resource_group_id
-      name     = rg.name
-      location = rg.location
-    }
+```hcl
+{
+  "connectivity" = {
+    name     = "rg-connectivity-japaneast"
+    location = "japaneast"
+    tags = { ... }
+    settings = { enabled = true }
   }
 }
 ```
 
-```bash title="outputの確認"
+### ステップ3: モジュール呼び出し
+
+```hcl title="実際の呼び出し"
+module "resource_groups" {
+  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
+  version = "0.2.1"
+
+  # connectivity用
+  name             = "rg-connectivity-japaneast"
+  location         = "japaneast"
+  enable_telemetry = true
+  tags = {
+    environment = "production"
+    purpose     = "connectivity"
+  }
+
+  providers = {
+    azurerm = azurerm.connectivity
+  }
+}
+```
+
+### ステップ4: モジュール内部で実行
+
+```hcl title="main.tf内で実行"
+resource "azurerm_resource_group" "this" {
+  location = "japaneast"
+  name     = "rg-connectivity-japaneast"
+  tags = {
+    environment = "production"
+    purpose     = "connectivity"
+  }
+}
+```
+
+### ステップ5: リソース作成
+
+```bash
+# Terraform実行
 terraform apply
+```
 
-# ↓出力
-Outputs:
-  debug_resource_groups = {
-    "primary" = {
-      id       = "/subscriptions/.../resourceGroups/rg-jp-connectivity"
-      name     = "rg-jp-connectivity"
-      location = "japaneast"
+**作成されるリソース：**
+
+```text
++ azurerm_resource_group.connectivity
+  name     = "rg-connectivity-japaneast"
+  location = "japaneast"
+```
+
+---
+
+## Part 5: 実践 - 新しいリソースグループの追加とカスタマイズ
+
+### パターン1: 基本的なリソースグループ追加
+
+**要件：**
+
+- 名前: `rg-security-japaneast`
+- リージョン: `japaneast`
+- カスタムタグ: 追加
+
+#### 手順1: 設定ファイルに追加
+
+```hcl title="platform-landing-zone.auto.tfvars"
+connectivity_resource_groups = {
+  connectivity = {
+    name     = "rg-connectivity-$${starter_location_01}"
+    location = "$${starter_location_01}"
+  }
+  
+  security = {  # 新規追加
+    name     = "rg-security-$${starter_location_01}"
+    location = "$${starter_location_01}"
+    tags = {
+      purpose = "security"
     }
   }
+}
 ```
 
-### Azureで確認
+#### 手順2: Terraform実行
 
-```bash title="Azure CLIでの確認"
-# 作成されたか確認
-az group list --output table
-
-# 特定のRGの詳細
-az group show --name rg-jp-connectivity
+```bash
+terraform plan
 ```
 
----
+**出力：**
 
-## よくあるエラー
-
-### エラー1: 名前の重複
-
-```
-Error: A resource with the ID "/subscriptions/.../resourceGroups/rg-hub" already exists
-```
-
-**原因**：同じ名前のリソースグループが既に存在
-
-**対処法**：
-```hcl title="名前重複の解決"
-# 名前を変える
-name = "rg-jp-connectivity-v2"
-
-# または既存を削除
-az group delete --name rg-jp-connectivity
-```
-
-### エラー2: 無効なlocation
-
-```
-Error: Invalid value for location
-```
-
-**原因**：locationの綴りミス
-
-**対処法**：
-```hcl title="locationの正しい書き方"
-# NG
-location = "japan-east"  # ハイフン入ってる
-
-# OK
-location = "japaneast"  # ハイフンなし
-```
-
-### エラー3: for_eachのエラー
-
-```
-Error: The for_each value does not have any elements
-```
-
-**原因**：`connectivity_resource_groups`が空
-
-**対処法**：
-```hcl title="最低限1個の定義が必要"
-# tfvarsで最低1個定義
-connectivity_resource_groups = {
-  primary = {
-    name     = "rg-hub"
+```text
++ module.resource_groups["security"]
+  + azurerm_resource_group.this
+    name     = "rg-security-japaneast"
     location = "japaneast"
+```
+
+```bash
+terraform apply
+```
+
+#### 手順3: 確認
+
+```bash
+az group show --name rg-security-japaneast
+```
+
+**出力：**
+
+```json
+{
+  "id": "/subscriptions/.../resourceGroups/rg-security-japaneast",
+  "location": "japaneast",
+  "name": "rg-security-japaneast",
+  "tags": {
+    "purpose": "security"
   }
 }
 ```
 
 ---
 
-## リソースグループの設計パターン
+### パターン2: 削除防止ロック付きリソースグループ
 
-### パターン1: 機能別
+**要件：**
 
-```hcl title="機能別リソースグループ"
-connectivity_resource_groups = {
-  network = {
-    name     = "rg-network"
-    location = "japaneast"
-  }
-  security = {
-    name     = "rg-security"
-    location = "japaneast"
-  }
-  management = {
-    name     = "rg-management"
-    location = "japaneast"
-  }
-}
-```
+- 名前: `rg-production-japaneast`
+- リージョン: `japaneast`
+- 削除防止ロック: 有効
 
-**メリット**：役割が明確
-**デメリット**：リソース数が多いと管理が大変
+!!! warning "main.resource.groups.tf の修正が必要"
+    現在の`main.resource.groups.tf`では`lock`パラメータを渡していません。
+    
+    以下の手順でmain.resource.groups.tfを修正してから、設定ファイルを変更します。
 
-### パターン2: リージョン別
+#### 手順1: main.resource.groups.tfを修正
 
-```hcl title="リージョン別リソースグループ"
-connectivity_resource_groups = {
-  japaneast = {
-    name     = "rg-jpe-connectivity"
-    location = "japaneast"
-  }
-  japanwest = {
-    name     = "rg-jpw-connectivity"
-    location = "japanwest"
+```hcl title="main.resource.groups.tf（修正前）"
+module "resource_groups" {
+  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
+  version = "0.2.1"
+
+  for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
+
+  name             = each.value.name
+  location         = each.value.location
+  enable_telemetry = var.enable_telemetry
+  tags             = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
+
+  providers = {
+    azurerm = azurerm.connectivity
   }
 }
 ```
 
-**メリット**：マルチリージョン構成がわかりやすい
-**デメリット**：同じリージョンに複数RGあると混乱
+**修正後：**
 
-### パターン3: 環境別
+```hcl title="main.resource.groups.tf（修正後）"
+module "resource_groups" {
+  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
+  version = "0.2.1"
 
-```hcl title="環境別リソースグループ"
-connectivity_resource_groups = {
-  prod = {
-    name     = "rg-prod-connectivity"
-    location = "japaneast"
-  }
-  dev = {
-    name     = "rg-dev-connectivity"
-    location = "japaneast"
-  }
-}
-```
+  for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
 
-**メリット**：環境分離が簡単
-**デメリット**：Landing Zonesの思想と合わない（サブスクリプションで分離すべき）
+  name             = each.value.name
+  location         = each.value.location
+  enable_telemetry = var.enable_telemetry
+  tags             = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
+  
+  # ロックパラメータを追加
+  lock = try(each.value.lock, null)
 
-### おすすめ：ハイブリッド
-
-```hcl title="リージョン×機能のハイブリッド"
-connectivity_resource_groups = {
-  primary_network = {
-    name     = "rg-jpe-network"
-    location = "japaneast"
-    tags = { tier = "network", region = "primary" }
-  }
-  secondary_network = {
-    name     = "rg-jpw-network"
-    location = "japanwest"
-    tags = { tier = "network", region = "secondary" }
+  providers = {
+    azurerm = azurerm.connectivity
   }
 }
 ```
 
-リージョン × 機能で分ける。わかりやすい。
+#### 手順2: 設定ファイルにロックを追加
+
+```hcl title="platform-landing-zone.auto.tfvars"
+connectivity_resource_groups = {
+  production = {
+    name     = "rg-production-$${starter_location_01}"
+    location = "$${starter_location_01}"
+    lock = {
+      kind = "CanNotDelete"
+      name = "production-lock"
+    }
+  }
+}
+```
+
+#### 手順3: Terraform実行
+
+```bash
+terraform plan
+```
+
+**出力：**
+
+```text
++ module.resource_groups["production"]
+  + azurerm_resource_group.this
+    name     = "rg-production-japaneast"
+    location = "japaneast"
+  
+  + azurerm_management_lock.this[0]
+    lock_level = "CanNotDelete"
+    name       = "production-lock"
+```
+
+```bash
+terraform apply
+```
+
+#### 手順4: ロックの確認
+
+```bash
+az lock list --resource-group rg-production-japaneast
+```
+
+**出力：**
+
+```json
+[
+  {
+    "id": "/subscriptions/.../resourceGroups/rg-production-japaneast/providers/Microsoft.Authorization/locks/production-lock",
+    "level": "CanNotDelete",
+    "name": "production-lock",
+    "notes": "Cannot delete the resource or its child resources."
+  }
+]
+```
+
+---
+
+### パターン3: RBAC権限付きリソースグループ
+
+**要件：**
+
+- 名前: `rg-app-japaneast`
+- リージョン: `japaneast`
+- 開発者にContributor権限
+- 閲覧者にReader権限
+
+!!! warning "main.resource.groups.tf の修正が必要"
+    `role_assignments`パラメータも現在は渡していません。
+
+#### 手順1: main.resource.groups.tfを修正
+
+```hcl title="main.resource.groups.tf（修正後）"
+module "resource_groups" {
+  source  = "Azure/avm-res-resources-resourcegroup/azurerm"
+  version = "0.2.1"
+
+  for_each = { for key, value in module.config.outputs.connectivity_resource_groups : key => value if try(value.settings.enabled, true) }
+
+  name             = each.value.name
+  location         = each.value.location
+  enable_telemetry = var.enable_telemetry
+  tags             = try(each.value.tags, null) == null ? module.config.outputs.tags : each.value.tags
+  
+  # ロックパラメータを追加
+  lock = try(each.value.lock, null)
+  
+  # RBAC権限パラメータを追加
+  role_assignments = try(each.value.role_assignments, {})
+
+  providers = {
+    azurerm = azurerm.connectivity
+  }
+}
+```
+
+#### 手順2: Principal IDを取得
+
+開発者と閲覧者のPrincipal IDを取得します。
+
+```bash
+# ユーザーのPrincipal ID取得
+az ad user show --id developer@example.com --query id -o tsv
+
+# サービスプリンシパルのPrincipal ID取得
+az ad sp show --id <app-id> --query id -o tsv
+```
+
+#### 手順3: 設定ファイルに権限を追加
+
+```hcl title="platform-landing-zone.auto.tfvars"
+connectivity_resource_groups = {
+  app = {
+    name     = "rg-app-$${starter_location_01}"
+    location = "$${starter_location_01}"
+    role_assignments = {
+      developer = {
+        role_definition_id_or_name = "Contributor"
+        principal_id               = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+        description                = "開発者権限"
+      }
+      reader = {
+        role_definition_id_or_name = "Reader"
+        principal_id               = "yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy"
+        description                = "閲覧者権限"
+      }
+    }
+  }
+}
+```
+
+#### 手順4: Terraform実行
+
+```bash
+terraform plan
+```
+
+**出力：**
+
+```text
++ module.resource_groups["app"]
+  + azurerm_resource_group.this
+    name     = "rg-app-japaneast"
+    location = "japaneast"
+  
+  + azurerm_role_assignment.this["developer"]
+    principal_id         = "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+    role_definition_name = "Contributor"
+    scope                = "/subscriptions/.../resourceGroups/rg-app-japaneast"
+  
+  + azurerm_role_assignment.this["reader"]
+    principal_id         = "yyyyyyyy-yyyy-yyyy-yyyy-yyyyyyyyyyyy"
+    role_definition_name = "Reader"
+    scope                = "/subscriptions/.../resourceGroups/rg-app-japaneast"
+```
+
+```bash
+terraform apply
+```
+
+#### 手順5: 権限の確認
+
+```bash
+az role assignment list --resource-group rg-app-japaneast --output table
+```
+
+**出力：**
+
+```text
+PrincipalName          Role         Scope
+---------------------  -----------  ---------------------------------------
+developer@example.com  Contributor  /subscriptions/.../rg-app-japaneast
+viewer@example.com     Reader       /subscriptions/.../rg-app-japaneast
+```
 
 ---
 
 ## まとめ
 
-**リソースグループの役割**：
-1. **リソースの箱**：全てのリソースはRGに属する
-2. **ライフサイクル管理**：RG削除で中身も全部削除
-3. **アクセス制御**：RG単位で権限管理
-4. **タグ付け**：コスト管理、検索
+### リソースグループ作成のポイント
 
-**覚えておくこと**：
+!!! success "このコードの役割"
+    **3つの主要機能：**
+    
+    1. **公式モジュール使用**: Azure Verified Modulesで安全・確実
+    2. **for_eachループ**: 複数リソースグループを効率的に作成
+    3. **フィルタリング**: `enabled`フラグで柔軟に制御
 
-- `for_each`でマップを展開
-- `try(value.settings.enabled, true)`で有効/無効制御
-- タグはフォールバック（個別 → 全体）
-- `providers`でサブスクリプション指定
+### モジュールの構成
 
-次のChapterでは、管理グループとポリシーの作成を見ていきます。
-ガバナンスの要となる部分です。
+| ファイル | 役割 | 重要度 |
+|---------|------|--------|
+| **main.tf** | リソース作成 | ★★★★★ |
+| **variables.tf** | 入力変数定義 | ★★★★☆ |
+| **outputs.tf** | 出力定義 | ★★★★☆ |
+| **terraform.tf** | プロバイダー要件 | ★★★☆☆ |
+| **main.telemetry.tf** | テレメトリー | ★★☆☆☆ |
 
-## 練習問題
+### リソースグループ作成フロー
 
-理解度チェックです。休憩中に考えてみましょう。
-
-### 問題1
-このプロジェクトで作成される管理リソースグループの名前は何ですか？  
-（`starter_location_01 = "japaneast"`の場合）
-
-### 問題2
-`for_each = local.resource_groups`を使う理由は何ですか？
-
-### 問題3
-次の設定で、リソースグループに付与されるタグは何ですか？
-
-```hcl
-management_resource_tags = {
-  environment = "prod"
-}
+```mermaid
+graph LR
+    A[設定ファイル] --> B[for_eachフィルタ]
+    B --> C[有効なRGのみ]
+    C --> D[公式モジュール呼び出し]
+    D --> E[main.tf実行]
+    E --> F[リソースグループ作成]
+    
+    style A fill:#e1f5ff
+    style C fill:#fff4e1
+    style F fill:#e8f5e9
 ```
 
 ---
 
-## 練習問題の答え
+## 次のステップ
 
-### 答え1
-**`rg-management-jp`**になります。
+リソースグループの作成と公式モジュールの内部構造を理解しましたか？
 
-```hcl
-management_resource_group_name = "rg-management-$${starter_location_01_short}"
-# starter_location_01_short = "jp"
-# 結果: rg-management-jp
-```
-
-### 答え2
-**複数のリソースグループを一度に作成するため**です。
-
-```hcl
-for_each = local.resource_groups
-# {
-#   "rg-management-jp" = {...}
-#   "rg-connectivity-jp" = {...}
-#   ...
-# }
-```
-
-`for_each`を使うことで、mapの要素ごとにリソースを作成できます。
-
-### 答え3
-**`environment = "prod"`が付与されます。**
-
-```hcl
-tags = {
-  environment = "prod"
-}
-```
-
-`management_resource_tags`に設定した値が、  
-そのままリソースグループの`tags`として設定されます。
-
----
+次は[08_管理グループとポリシーv3.md](./08_管理グループとポリシーv3.md)に進んで、  
+管理グループとポリシーの構築方法を学びましょう。
 
 **所要時間**: 40分  
 **難易度**: ★★★☆☆  
-**前**: [06_設定テンプレート.md](./06_設定テンプレート.md)  
-**次**: [08_管理グループとポリシー.md](./08_管理グループとポリシー.md)
+**次**: [08_管理グループとポリシーv3.md](./08_管理グループとポリシーv3.md)
