Chapter 07校正完了 + instruction更新: URLの扱いと視覚的補助のルール追加

--- a/docs-site/docs/07_リソースグループ.md
+++ b/docs-site/docs/07_リソースグループ.md
@@ -219,9 +219,11 @@ providers = {
 
 **GitHubリポジトリ：**
 
-```text
 https://github.com/Azure/terraform-azurerm-avm-res-resources-resourcegroup
-```
+
+
+ここからは公式のモジュールを開きながら見ていきましょう。こんな感じ↓
+![モジュールとドキュメントを並べて見る](img/スクリーンショット2.png)
 
 **主要ファイル：**
 
