docs: Chapter 08 v3にvariables.tfの詳細解説を追加

--- a/docs-site/docs/08_管理グループとポリシーv3.md
+++ b/docs-site/docs/08_管理グループとポリシーv3.md
@@ -163,7 +163,99 @@ module "management_groups" {
 
 Azure公式の「Azure Landing Zones Pattern Module」を使用。
 
-### 2-3: locals.tfのデータ変換
+### 2-3: variables.tfの内容
+
+```hcl title="modules/management_groups/variables.tf（主要部分）"
+variable "management_group_settings" {
+  type = object({
+    architecture_name            = optional(string, "alz_custom")
+    parent_resource_id           = string
+    location                     = string
+    policy_default_values        = optional(any)
+    policy_assignments_to_modify = optional(any)
+    management_group_hierarchy_settings = optional(object({
+      default_management_group_name            = string
+      require_authorization_for_group_creation = optional(bool, true)
+      update_existing                          = optional(bool, false)
+    }))
+    partner_id = optional(string)
+    retries = optional(object({
+      management_groups = optional(object({
+        error_message_regex  = optional(list(string))
+        interval_seconds     = optional(number)
+        max_interval_seconds = optional(number)
+        multiplier           = optional(number)
+        randomization_factor = optional(number)
+      }))
+      # ... 他のリトライ設定
+    }), {})
+    subscription_placement = optional(map(object({
+      subscription_id       = string
+      management_group_name = string
+    })))
+    timeouts = optional(object({
+      management_group = optional(object({
+        create = optional(string, "60m")
+        delete = optional(string, "60m")
+        update = optional(string, "60m")
+        read   = optional(string, "60m")
+      }), {})
+      # ... 他のタイムアウト設定
+    }))
+    dependencies = optional(map(list(string)), {})
+    # ... 他のオプション設定
+  })
+}
+
+variable "enable_telemetry" {
+  type        = bool
+  default     = true
+  description = "テレメトリー送信の有効化"
+}
+```
+
+**主要な変数：**
+
+| 変数 | 必須 | デフォルト | 用途 |
+|------|------|-----------|------|
+| `architecture_name` | オプション | `"alz_custom"` | アーキテクチャ定義名 |
+| `parent_resource_id` | ✅ 必須 | なし | 親管理グループID |
+| `location` | ✅ 必須 | なし | デフォルトリージョン |
+| `policy_default_values` | オプション | なし | ポリシーパラメータ |
+| `policy_assignments_to_modify` | オプション | なし | ポリシー変更 |
+| `subscription_placement` | オプション | なし | サブスクリプション配置 |
+| `retries` | オプション | `{}` | リトライ設定 |
+| `timeouts` | オプション | 各60分 | タイムアウト設定 |
+
+**特徴的な設定：**
+
+**リトライ設定（retries）：**
+
+API呼び出しが失敗した場合の再試行設定。大規模環境で有用。
+
+```hcl title="リトライ設定例"
+retries = {
+  management_groups = {
+    interval_seconds     = 10
+    max_interval_seconds = 180
+    multiplier           = 2
+  }
+}
+```
+
+**タイムアウト設定（timeouts）：**
+
+リソース作成の待機時間。デフォルトは60分。
+
+```hcl title="タイムアウト設定例"
+timeouts = {
+  management_group = {
+    create = "120m"  # 大規模環境では長めに
+  }
+}
+```
+
+### 2-4: locals.tfのデータ変換
 
 ```hcl title="modules/management_groups/locals.tf"
 locals {
